# evoeval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
codegen/: generate.py  model.py
evoeval/: __init__.py  data.py  evaluate.py
evoeval/eval_test/: __init__.py  _creative_special_oracle.py  _difficult_special_oracle.py  _he_special_oracle.py  _subtle_special_oracle.py
evoeval/util/: api_request.py
tool/: sanitize.py
